<resources>
    <string name="app_name">Wings Store</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="username_hint">username</string>
    <string name="password_hint">password</string>
    <string name="signup_login_hint">Already have an account? Sign In</string>
    <string name="login_signup_hint">Don\'t have an account? Sign Up</string>
    <string name="btn_buy">buy</string>
    <string name="btn_checkout">checkout</string>
    <string name="header_checkout">CHECKOUT</string>
    <string name="btn_confirm">confirm</string>
    <string name="price">Price</string>
    <string name="dimension">dimension</string>
    <string name="price_unit">Price Unit</string>
    <string name="total">Total:</string>
    <string name="sub_total">Sub Total:</string>
    <string name="pcs">PCS</string>
    <string name="transaction_date">transaction date:</string>
    <string name="buyer">Buyer:</string>
    <string name="total_price">Total Price</string>
</resources>