<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <androidx.cardview.widget.CardView
        style="@style/loginCard"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/loginViewsMargin"
        android:layout_marginBottom="@dimen/loginViewsMargin"
        android:backgroundTint="@color/whiteCardColor"
        android:elevation="5dp"
        app:cardCornerRadius="@dimen/cardRadius">

        <LinearLayout
            style="@style/linearParent"
            android:layout_gravity="center"
            android:padding="@dimen/loginViewsMargin">

            <TextView
                style="@style/headerTextPrimary"
                android:layout_marginTop="@dimen/loginViewsMargin"
                android:text="@string/register" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputUsername"
                style="@style/parent"
                android:layout_marginTop="@dimen/loginViewsMargin">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextUsername"
                    style="@style/modifiedEditText"
                    android:hint="@string/username_hint"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    tools:ignore="TouchTargetSizeCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputPassword"
                style="@style/parent"
                android:layout_marginTop="@dimen/loginViewsMargin"
                app:boxStrokeColor="@color/colorPrimaryDark"
                app:endIconDrawable="@drawable/ic_password_toggle"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextPassword"
                    style="@style/modifiedEditText"
                    android:hint="@string/password_hint"
                    android:inputType="textPassword"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_register"
                style="@style/loginButton"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/loginViewsMargin"
                android:text="@string/register" />


            <TextView
                android:id="@+id/toLogin"
                style="@style/parent"
                android:layout_marginTop="@dimen/loginViewsMargin"
                android:minHeight="48dp"
                android:onClick="viewRegisterClicked"
                android:text="@string/signup_login_hint"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>


</layout>